Se actualizan requerimientos y acceso a los datos
Se crean servicios